# fraiseql

./: .cargo-mutants.toml  .cleanup-plan.md  .clippy.toml  .docker-onboarding-status.md  .docker-phase2-status.md  .docker-phase3-status.md  .docker-phase4-status.md  .docker-phase4-verification.md  .docker-phase5-status.md  .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .markdownlint.json  .pre-commit-ci.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .readthedocs.yml  .release-please-manifest.json  .rustfmt.toml  .session-handoff.md  .tool-versions  .trivyignore  .vale.ini  20251029_doc_validation_issues.md  20260128_TODO.md  404.html  ACTUAL_COMPLETION_STATUS.md  ACTUAL_V2_FEATURE_INVENTORY.md  ADVANCED_FILTERING.md  AGENT_PROMPT_MERGE_PR.md  AI_AGENT_GUIDE_PHASE5_FIXED.md  ALPHA_RELEASE_NOTES.md  ANALYSIS_DOCUMENTS.md  ARCHITECTURE.md  ASSESSMENT_2025-06-28.md  AUDIT-2026-06-11.md  BACKLOG.md  BENCHMARKING.md  (+346 more)
benchmarks/: BENCHMARK_RESULTS.md  METHODOLOGY.md  README.md  REAL_PERFORMANCE_BENCHMARKS.md  SECURITY_NOTE.md  VIKTOR_PERFORMANCE_VALIDATION.md  __init__.py  baseline.json  benchmark-results.md  c_extension_analysis.md  cascade_performance_benchmark.py  compare.py  comprehensive_performance_test.py  database_transformation_benchmark.py  detect_regression.py  framework_comparison.py  index.html  methodology.md  outlier_analysis.py  passthrough_tradeoffs.md  pyproject.toml  rust_vs_python_benchmark.py  schema_registry_benchmark.py  setup.sh  turbo_router_benchmark.py  vectorstore-benchmark.md  vectorstore_integration_benchmark.py
benchmarks/comparison/: README.md
benchmarks/java/: pom.xml
benchmarks/jsonb_generation_benchmark/: README.md  analysis.md  comparison-analysis.md  summary.md
benchmarks/load/: README.md  basic.js  mutations.js  spike.js  stress.js  test_schema.json  test_schema.sql
benchmarks/ltree_performance_benchmark/: README.md  ltree_benchmark.py
benchmarks/methodology/: index.html
benchmarks/performance-benchmarks/: BENCHMARK_SYSTEM_SUMMARY.md  Makefile  README.md  benchmark_profile.json  benchmark_results_2025-06-14T14-00-17.210850.json  benchmark_runner.py  create_adaptive_seed.sh  detect_benchmark_profile.py  pyproject.toml  run_benchmark.sh  run_comparison_benchmark.sh  run_final_benchmark.sh  run_robust_benchmark.sh  run_simple_benchmark.sh  test_views.sql
benchmarks/token-benchmarks/: .env.example  README.md  llm_config.py  llm_token_test_suite.py  pyproject.toml  requirements.txt
crates/fraiseql-arrow/: Cargo.toml  README.md
crates/fraiseql-auth/: Cargo.toml  README.md
crates/fraiseql-cdc-sinks/: Cargo.toml  README.md
crates/fraiseql-cli/: Cargo.toml  README.md
crates/fraiseql-codegen/: Cargo.toml  DESIGN-CLIENT-TS.md  README.md
crates/fraiseql-core/: Cargo.toml  README.md
crates/fraiseql-db/: Cargo.toml  README.md
crates/fraiseql-error/: Cargo.toml  README.md
crates/fraiseql-executor/: Cargo.toml
crates/fraiseql-federation/: Cargo.toml  README.md
crates/fraiseql-files/: Cargo.toml
crates/fraiseql-functions/: Cargo.toml  README.md
crates/fraiseql-observers/: Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  PHASE_8_COMPLETION_SUMMARY.md  PHASE_8_INDEX.md  PHASE_9_1_ACTION_TRACING_GUIDE.md  PHASE_9_1_COMPLETION_SUMMARY.md  PHASE_9_1_DESIGN.md  PHASE_9_1_IMPLEMENTATION_GUIDE.md  PHASE_9_1_INDEX.md  PHASE_9_1_JAEGER_INTEGRATION_GUIDE.md  PHASE_9_2_A_METRICS_GUIDE.md  PHASE_9_2_B_MACROS_GUIDE.md  PHASE_9_2_C_LOGGING_GUIDE.md  PHASE_9_2_DESIGN.md  PHASE_9_ROADMAP.md  README.md  RELEASE_NOTES_PHASE_8.md  SCHEMA.md  deployment-guide.md  deployment.md  docker-compose.multi-database.yml  docker-compose.nats-distributed.yml  docker-compose.postgres-only.yml  docker-compose.postgres-redis.yml  schema.md
crates/fraiseql-observers-macros/: Cargo.toml
crates/fraiseql-runtime/: Cargo.toml
crates/fraiseql-secrets/: Cargo.toml  README.md
crates/fraiseql-server/: Cargo.toml  README.md  SCHEMA.md  build.rs
crates/fraiseql-storage/: Cargo.toml  README.md
crates/fraiseql-test-support/: Cargo.toml  README.md
crates/fraiseql-test-utils/: Cargo.toml  README.md
crates/fraiseql-webhooks/: Cargo.toml  README.md
fraiseql-python/: PYTHON_FEATURE_PARITY.md  README.md  ecommerce_schema.json  pyproject.toml
fraiseql-python/docs/: ANALYTICS_GUIDE.md  DECORATORS_REFERENCE.md  EXAMPLES.md  INSTALLATION.md  TROUBLESHOOTING.md
fraiseql-python/examples/: aggregation_basic.py  analytics_schema.py  basic_schema.py  ecommerce_with_observers.py
fraiseql-python/tests/: __init__.py  generate_parity_schema.py  test_analytics.py  test_attribute_based_access_control.py  test_custom_scalar_e2e.py  test_decorators.py  test_federation_compilation.py  test_federation_decorators.py  test_field_scope.py  test_golden_schema.py  test_llamaindex.py  test_observers.py  test_types.py  test_types_export_minimal.py
fraiseql-rust/: Cargo.toml  README.md  RUST_FEATURE_PARITY.md
fraiseql-rust/src/: authorization.rs  field.rs  lib.rs  policies.rs  roles.rs
fraiseql-rust/tests/: integration_test.rs  phase18_cycle16_scope_extraction_test.rs
fraiseql_rs/: 20260101_clippy_phase5f.md  20260101_clippy_progress.md  20260101_remaining_warnings.md  API.md  Cargo.toml  PHASE_2_4_STRESS_TESTING_PLAN.md  PHASE_3_SECURITY_AUDIT_PLAN.md  README.md  __init__.py  build.rs  clippy_output.txt  clippy_output_5f.txt  fix_clippy.py  pyproject.toml
fraiseql_rs/benches/: cache_validation.rs  connection_pool.rs  core_benchmark.rs  memory.rs  mutation_benchmark.rs  pipeline.rs  query_execution.rs  streaming.rs  workload_simulator.rs
fraiseql_rs/docs/: camel-case-apis.md  json-transformation-guide.md
fraiseql_rs/src/: camel_case.rs  graphql_response.rs  json_transform.rs  lib.rs  lib.rs.v1_9_6_SECURITY_ARCHITECTURE.md  mutations.rs  schema_generators.rs  schema_registry.rs  (+1 more)
fraisier/: .env.example  DEPLOYMENT_EXAMPLES.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  PRODUCTION_GUIDE.md  README.md  ROADMAP.md  TODO_20260123.md  TROUBLESHOOTING.md  docker-compose.yml  production-guide.md  pyproject.toml  roadmap.md
(+12717 files in other folders)
