# FraiseQL v2 - Compiled GraphQL Execution Engine
# Workspace root configuration

[patch.crates-io]
# Local patch: upgrade thiserror dependency from 1.x to 2.x to eliminate
# duplicate thiserror versions in the build. Pending upstream PR to graphql-rust/graphql-parser.
graphql-parser = {path = "vendor/graphql-parser"}

[profile.bench]
lto = "thin"
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[profile.test]
opt-level = 1

[workspace]
members = [
  "crates/fraiseql",  # Root umbrella crate
  "crates/fraiseql-arrow",
  "crates/fraiseql-auth",
  "crates/fraiseql-cli",
  "crates/fraiseql-core",
  "crates/fraiseql-db",
  "crates/fraiseql-error",
  "crates/fraiseql-observers",
  "crates/fraiseql-secrets",
  "crates/fraiseql-server",
  "crates/fraiseql-test-utils",
  "crates/fraiseql-webhooks",
  "crates/fraiseql-federation",  # Apollo Federation v2 support
  "crates/fraiseql-wire"  # Streaming JSON query engine for Postgres
]
resolver = "2"

[workspace.dependencies]
# Encryption
aes-gcm = "0.10"
anyhow = "1.0"
# Lock-free atomic swap for hot-reloading Arc<Executor>
arc-swap = "1"
async-trait = "0.1"
# HTTP server (Axum)
axum = {version = "0.8"}
# Encoding
base64 = "0.22"
# Utilities
bytes = "1.0"
# Time
chrono = {version = "0.4", features = ["serde"]}
dashmap = "6.0"
# Connection pooling
deadpool = "0.12"
deadpool-postgres = "0.14"
# Internal crates
fraiseql-arrow = {path = "crates/fraiseql-arrow", version = "2.1.0"}
fraiseql-auth = {path = "crates/fraiseql-auth", version = "2.1.0"}
fraiseql-cli = {path = "crates/fraiseql-cli", version = "2.1.0"}
fraiseql-core = {path = "crates/fraiseql-core", version = "2.1.0", default-features = false}
fraiseql-db = {path = "crates/fraiseql-db", version = "2.1.0", default-features = false}
fraiseql-error = {path = "crates/fraiseql-error", version = "2.1.0", default-features = false}
fraiseql-federation = {path = "crates/fraiseql-federation", version = "2.1.0"}
fraiseql-observers = {path = "crates/fraiseql-observers", version = "2.1.0"}
fraiseql-secrets = {path = "crates/fraiseql-secrets", version = "2.1.0"}
fraiseql-server = {path = "crates/fraiseql-server", version = "2.1.0"}
fraiseql-webhooks = {path = "crates/fraiseql-webhooks", version = "2.1.0"}
fraiseql-wire = {path = "crates/fraiseql-wire", version = "2.1.0"}
futures = "0.3"
# GraphQL parsing — patched via vendor/graphql-parser to use thiserror 2.x.
# See [patch.crates-io] at the bottom of this file.
graphql-parser = "0.4"
hex = "0.4"
hmac = "0.12"
http-body = "1"
http-body-util = "0.1"
hyper = {version = "1.0"}
indexmap = {version = "2", features = ["serde"]}
itertools = "0.13"
jsonwebtoken = "9.2"
# SMTP client
lettre = {version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"]}
linked-hash-map = "0.5"
# Caching
lru = "0.16"
# Parking lot (faster mutexes)
parking_lot = "0.12"
# Property-based testing
prost = "0.14"
prost-reflect = {version = "0.16", features = ["serde"]}
prost-types = "0.14"
proptest = "1.4"
# Random
rand = "0.8"
# Kafka
rdkafka = {version = "0.39", features = ["tokio"]}
regex = "1.10"
# HTTP client — rustls only, no OpenSSL dependency
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
# SQLite
rusqlite = {version = "0.32", features = ["bundled"]}
# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# Crypto
sha2 = "0.10"
# SQL toolkit (MySQL feature gated behind per-crate optional flags)
sqlx = {version = "0.8", features = ["runtime-tokio", "json"]}
# Testing utilities
temp-env = {version = "0.3", features = ["async_closure"]}
tempfile = "3.25"
# Error handling
# NOTE: rustls 0.22 is pulled by tokio-rustls 0.25 via sqlx 0.8; rustls 0.23 by reqwest/tonic.
# Unification blocked on sqlx 0.9 (which will upgrade to tokio-rustls 0.26 / rustls 0.23).
thiserror = "2.0"
# Async runtime — each crate specifies only the tokio features it needs
tokio = {version = "1.0"}
# Database drivers
# PostgreSQL
tokio-postgres = {version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"]}
tokio-util = {version = "0.7"}
# Configuration
toml = "0.8"
tonic = "0.14"
tonic-reflection = "0.14"
tower = {version = "0.5"}
tower-http = {version = "0.5", features = ["cors", "compression-gzip"]}
# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
# UUID
uuid = {version = "1.21", features = ["v4", "serde"]}

[workspace.lints.clippy]
# ── Global levels ────────────────────────────────────────────────────────────
# priority = -1 lets individual lint entries below override the group level.
all = {level = "deny", priority = -1}
# Reason: crates.io metadata is required for all publishable crates.
cargo = {level = "deny", priority = -1}
# Reason: all crates now have the required crates.io metadata fields.
cargo_common_metadata = "deny"
# Reason: negative-first guard clauses are sometimes more readable than positive-first.
if_not_else = "allow"
# Reason: public fallible functions must document errors. Crates with blanket coverage
# gaps use crate-level `#![allow(clippy::missing_errors_doc)]` until fully documented.
missing_errors_doc = "deny"
# Reason: public functions that can panic must document when. Same override strategy as above.
missing_panics_doc = "deny"
# Reason: the `fraiseql-*` naming convention triggers this for every type in every crate
# (e.g., `fraiseql_core::FraiseQLError`, `fraiseql_server::ServerConfig`).
# Applying the rule project-wide would require renaming stable public API.
module_name_repetitions = "allow"
# Reason: transitive dependencies routinely pull in multiple versions; not actionable.
multiple_crate_versions = "allow"
# Reason: builder methods and fluent APIs generate noise; applied selectively per crate.
must_use_candidate = "allow"
# Reason: nursery lints are experimental and may have false positives; keep as warn
# so they surface in CI without blocking builds.
nursery = {level = "warn", priority = -1}
# Reason: explicit match is sometimes clearer than map_or_else for multi-line branches.
option_if_let_else = "allow"
# Reason: `.unwrap_or(default_fn())` is sometimes clearer than `.unwrap_or_else(|| ...)`.
or_fun_call = "allow"
pedantic = {level = "deny", priority = -1}
# Reason: style preference — closure is sometimes clearer than a method reference.
redundant_closure_for_method_calls = "allow"
# Reason: builder pattern — chained methods don't always return a value callers must check.
return_self_not_must_use = "allow"
# Reason: false positives in async code with MutexGuard held across await points.
significant_drop_tightening = "allow"
# Reason: short variable names are idiomatic in SQL generation (lhs, rhs, sq, op).
similar_names = "allow"
# Reason: config structs have many independent boolean flags that map directly to TOML;
# converting to bitflags would break serde deserialization.
struct_excessive_bools = "allow"
# Reason: clippy's too_many_lines threshold is hardcoded at 100 lines with no config option;
# large match arms and SQL generation tables legitimately exceed this limit.
too_many_lines = "allow"
# Reason: style preference; `format!("{}", x)` and `format!("{x}")` are both clear.
uninlined_format_args = "allow"
# Reason: some functions return Option/Result to match a trait signature even when
# they always succeed; API consistency takes priority here.
unnecessary_wraps = "allow"
# Reason: some trait adapter methods are async for future extensibility or trait conformance.
unused_async = "allow"
# Reason: enumerate index is sometimes added preemptively for debugging or future use.
unused_enumerate_index = "allow"
# Reason: some trait implementations accept self for API uniformity even when unused.
unused_self = "allow"
# ── Security ─────────────────────────────────────────────────────────────────
# Reason: production code must use .expect("reason") to document assumptions;
# .unwrap() is only permitted in tests/examples with an explicit allow + Reason.
unwrap_used = "deny"
# Reason: using the concrete type name is sometimes clearer than Self in impl blocks.
use_self = "allow"

[workspace.lints.rust]
dead_code = "deny"
missing_docs = "deny"
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"

# ---------------------------------------------------------------------------
# Crate size budgets — enforced by tools/check-crate-sizes.sh in CI.
# Limits are set at ~50% above current size for small crates. Crates that
# exceed their budget must be split before merging.
# ---------------------------------------------------------------------------
[workspace.metadata.crate-size-budget]
fraiseql-arrow = 15_000
fraiseql-auth = 25_000
fraiseql-cli = 40_000
fraiseql-core = 110_000  # post-split budget; fraiseql-db extracted (CS-3)
fraiseql-db = 25_000
fraiseql-error = 5_000
fraiseql-observers = 45_000
fraiseql-secrets = 20_000
fraiseql-server = 55_000
fraiseql-test-utils = 5_000
fraiseql-webhooks = 10_000
fraiseql-wire = 20_000

[workspace.package]
authors = ["FraiseQL Team <team@fraiseql.dev>"]
categories = ["database", "web-programming"]
documentation = "https://docs.fraiseql.dev"
edition = "2021"
homepage = "https://fraiseql.dev"
keywords = ["graphql", "database", "compiler", "sql"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fraiseql/fraiseql"
rust-version = "1.88"  # MSRV — driven by dependency requirements
version = "2.1.0"
