[dev-dependencies]

[lib]
name = "fraiseql_rust"
path = "src/lib.rs"

[lints.clippy]
all = "deny"
cargo = "deny"
nursery = "warn"
pedantic = "deny"

[lints.rust]
unsafe_code = "forbid"

[package]
authors = ["FraiseQL Contributors"]
categories = ["database", "network-programming"]
description = "Rust authoring language for FraiseQL with 100% feature parity"
edition = "2021"
keywords = ["graphql", "authorization", "rbac", "schema"]
license = "Apache-2.0"
name = "fraiseql-rust"
repository = "https://github.com/fraiseql/fraiseql"
version = "1.0.0"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "phase18_cycle16_scope_extraction_test"
path = "tests/phase18_cycle16_scope_extraction_test.rs"

[workspace]
