[package]
name = "fraiseql-rust"
version = "2.0.0-rc.2"
edition = "2021"
description = "Rust authoring language for FraiseQL (not yet implemented)"
license = "Apache-2.0"
repository = "https://github.com/fraiseql/fraiseql"
authors = ["FraiseQL Contributors"]
categories = ["database", "network-programming"]
keywords = ["graphql", "schema", "authoring"]

[lib]
name = "fraiseql_rust"
path = "src/lib.rs"

[workspace]
